--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EventbrideApp</title>
+    <title>TopEvent</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="<%= root_path%>">TopEvent</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Créer Evènement</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+
+          <% if current_user %>
+            <li class="nav-item dropdown">
+              <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#" aria-expanded="false">Mon profil<b class="caret"></b></a>
+              <ul class="dropdown-menu">					
+                <li><a href="<%= edit_user_registration_path%>" class="dropdown-item">Mon profil</a></li>
+                <%= link_to "Deconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item" %>            </ul>
+            </li>
+          <% else %>
+            <li class="nav-item dropdown">
+              <a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#" aria-expanded="false">S'inscrire/Se connecter<b class="caret"></b></a>
+              <ul class="dropdown-menu">					
+                <li><a href="<%= new_user_registration_path%>" class="dropdown-item">S'inscrire</a></li>
+                <li><a href="<%= new_user_session_path%>" class="dropdown-item">Se connecter</a></li>
+              </ul>
+            </li>
+          <% end %>
+          
+       </ul>
+     </div>  
+    </nav>
+    
+    <%= yield %>  
   </body>
 </html>
+
+
