--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
         <div class="actions mt-5">
-          <%= f.submit "Send me reset password", class: "btn btn-lg btn-primary btn-block" %>
+          <%= f.submit "Send me reset password", class: "btn btn-lg btn-dark btn-block" %>
         </div>
       <% end %>
       <br />
