--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
         <div class="actions mt-5">
-          <%= f.submit "Inscription", class: "btn btn-lg btn-primary btn-block" %>
+          <%= f.submit "Inscription", class: "btn btn-lg btn-dark btn-block" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
